--- a/app/globals.css
+++ b/app/globals.css
@@ -19,10 +19,6 @@
 body {
   font-family: 'Inter', sans-serif;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-    to bottom,
-    rgb(var(--background-start-rgb)),
-    rgb(var(--background-end-rgb))
-  );
+  background: #080808 ;
   overflow-x: hidden;
 }
